--- a/index.html
+++ b/index.html
@@ -9,23 +9,20 @@
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="css/color.css">
 	<link rel="stylesheet" href="css/fontawesome/css/all.css">
-	<title>Index</title>
+	<title>Vücut geliştirme</title>
+	<script src="cordova.js"></script>
+	<script src="js/jquery.js"></script>
+	<script src="js/sweetalert2@10.js"></script>
+	<script src="js/start.js"></script>
 </head>
 <body>
 	<figure class="logo position-fixed screen-center">
 		<img src="img/icons/icon.png">
-		<h4>Vücut geliştirme rehberi</h4>
+		<h4 class="app-name">Vücut geliştirme rehberi</h4>
 		<span>v1.0.0</span>
 		<img src="img/gif/loading.jpg" class="loader">
 	</figure>
 
-	<script type="text/javascript">
-		setTimeout(function()
-		{
-			window.location = "main.html";
-		},2000);
-
-	</script>
 
 </body>
 </html>
