--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	<link rel="stylesheet" href="css/color.css">
 	<link rel="stylesheet" href="css/fontawesome/css/all.css">
 	<title>Vücut geliştirme</title>
-	<script src="cordova.js"></script>
+	<!-- <script src="cordova.js"></script> -->
 	<script src="js/jquery.js"></script>
 	<script src="js/sweetalert2@10.js"></script>
-	<script src="js/start.js"></script>
+	
 </head>
 <body>
 	<figure class="logo position-fixed screen-center">
@@ -23,6 +23,6 @@
 		<img src="img/gif/loading.jpg" class="loader">
 	</figure>
 
-
+<script src="js/start.js"></script>
 </body>
 </html>
