--- a/training.html
+++ b/training.html
@@ -45,7 +45,6 @@
 		<ul id="menu-collapse">
 			
 		</ul>
-		
 	</div>
 	<div class="menu-darkness"></div>
 
@@ -70,7 +69,9 @@
 	</div>
 
 	<div class="trainings">
-		
+		<ul id="trainings">
+			
+		</ul>
 	</div>
 
 	<!-- <script type="text/javascript" src="js/SocialSharing.js"></script> -->
