--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 	</div>
 
 	
-	<div class="fixed-top">
+	<div class="fixed-top header">
 	  <nav class="navbar navbar-dark bg-dark">
 	  	<div class="float-left menu-icon">
 	  		<i class="fas fa-bars text-light pt-2 pb-2 lead"></i>
