--- a/training.html
+++ b/training.html
@@ -21,7 +21,7 @@
 	</div>
 
 	
-	<div class="fixed-top">
+	<div class="fixed-top header">
 	  <nav class="navbar navbar-dark bg-dark">
 	  	<div class="float-left menu-icon">
 	  		<i class="fas fa-bars text-light pt-2 pb-2 lead"></i>
@@ -68,11 +68,49 @@
 		</div>
 	</div>
 
+	<div class="tabs">
+		<ul class="nav nav-tabs" id="myTab" role="tablist">
+		  <li class="nav-item">
+		    <a class="nav-link active" id="home-title" data-toggle="tab" href="#home"></a>
+		  </li>
+		  <li class="nav-item">
+		    <a class="nav-link" id="musc-title" data-toggle="tab" href="#musc"></a>
+		  </li>
+		  <li class="nav-item">
+		    <a class="nav-link" id="how-title" data-toggle="tab" href="#how"></a>
+		  </li>
+		  <li class="nav-item">
+		    <a class="nav-link" id="help-title" data-toggle="tab" href="#help"></a>
+		  </li>
+		</ul>
+		<div class="tab-content">
+		  <div class="tab-pane fade show active" id="home">
+		  	<img src="">
+		  </div>
+		  <div class="tab-pane fade" id="musc">
+		  	<p>
+		  		
+		  	</p>
+		  </div>
+		  <div class="tab-pane fade" id="how">
+		  	<p>
+		  	</p>
+		  </div>
+		  <div class="tab-pane fade" id="help">
+		  	<p>
+		  		<br>
+		  	</p>
+		  </div>
+		</div>
+	</div>
 	<div class="trainings">
 		<ul id="trainings">
 			
 		</ul>
 	</div>
+
+
+
 
 	<!-- <script type="text/javascript" src="js/SocialSharing.js"></script> -->
 	<script type="text/javascript" src="js/training.js"></script>	
