--- a/setting.html
+++ b/setting.html
@@ -38,9 +38,13 @@
 				    <label class="sound"></label>
 				
 				    <select class="form-control sound-input">
-					  <option id = "open" value="open"></option>
-					  <option id = "close" value="close"></option>
-					</select>				
+					  <option id = "open" 	value="open"></option>
+					  <option id = "close" 	value="close"></option>
+					</select>
+
+					<select class="form-control alarm-input mt-3">
+					  
+					</select>			
 				</div>
 
 				<div class="form-group col-lg-12 col-sm-12">
