--- a/programs.html
+++ b/programs.html
@@ -49,8 +49,8 @@
 										</label>
 									</div>
 									<div class="col-4">
-										<span class="orange d-block">
-											0/30
+										<span class="orange d-block days">
+											
 										</span>
 										<label class="d-block">
 											<small class="day-txt"></small>
@@ -70,17 +70,18 @@
 					<div class="week d-block float-left">
 						<div class="categories-w" >
 							<div class="float-left w-100 bg-dark item mb-1">
-								<a class="item-img" href="">
+								<div class="item-img" >
 									<div class="darkness"></div>
 									<img src="img/karin_cetin.jpg">
-								</a>
-								<a class="item-name text-center text-decoration-none" href="">
+								</div>
+								<div class="item-name text-center">
 									<h4 class="text-light lead week-txt"></h4>
-								</a>
+								</div>
 							</div>
 						</div>
 					</div>
 
+					
 					<div class="program float-left">
 						<div class="w-100 text-left mt-5">
 							<h4 class="form-body-info-txt lead"></h4>
@@ -93,10 +94,15 @@
 					</div>
 				</div>
 
+				<div class="week-program-list" style="display: none;">
+					<div class="plan-categories categories"></div>
+				</div>
+
+
 				<div class="simple-program" style="display: none;">
 					<div class="start-program">
 						<div class="img-program">
-							<img src="img/kol_cetin.jpg" class="img-fluid s-img-program">
+							<img src="" class="img-fluid s-img-program">
 						</div>
 						<div class="program-datas">
 							<label class="d-block float-left w-100 pt-1 pb-1 mt-2 text-left">
