--- a/programs.html
+++ b/programs.html
@@ -95,7 +95,7 @@
 				</div>
 
 				<div class="week-program-list" style="display: none;">
-					<div class="plan-categories categories"></div>
+					<div class="plan-categories categories categories-w"></div>
 				</div>
 
 
@@ -142,7 +142,6 @@
 			</div>
 		</div>
 	</div>
-
 	<!-- <script type="text/javascript" src="js/SocialSharing.js"></script> -->
 	<script type="text/javascript" src="js/program.js"></script>	
 </body>
