--- a/programs.html
+++ b/programs.html
@@ -31,8 +31,8 @@
 								
 							</h6>
 							<div class="col-12 text-center text-muted">
-								<div class="row  add-info">
-									<div class="col-4">
+								<div class="row">
+									<div class="col-4 add-info">
 										<span class="weight orange d-block">
 											+
 										</span>
@@ -40,7 +40,7 @@
 											<small class="weight-txt"></small>
 										</label>
 									</div>
-									<div class="col-4">
+									<div class="col-4 add-info">
 										<span class="height orange d-block">
 											+
 										</span>
@@ -48,13 +48,14 @@
 											<small class="height-txt"></small>
 										</label>
 									</div>
-									<div class="col-4">
+									<div class="col-4"><a href="graphics.html" class="text-decoration-none">
 										<span class="orange d-block days">
 											
 										</span>
 										<label class="d-block">
-											<small class="day-txt"></small>
+											<small class="day-txt text-muted"></small>
 										</label>
+										</a>
 									</div>
 
 								</div>
@@ -67,7 +68,7 @@
 						</div>					
 					</div>
 
-					<div class="week d-block float-left">
+					<div class="week float-left">
 						<div class="categories-w" >
 							<div class="float-left w-100 bg-dark item mb-1">
 								<div class="item-img" >
