--- a/programs.html
+++ b/programs.html
@@ -94,6 +94,52 @@
 					</div>
 				</div>
 
+				<div id="week-select-day" style="display: none;">
+					<div class="row">
+						<div class="first-week pb-5 border-bottom">
+							<div class="col-12">
+								<div class="d-block float-left w-100">
+									<p class="text-22px"><b id="first-week">Birinci hafta</b></p>
+								</div>
+							</div>
+
+							<div class="col-lg-4 col-md-6 col-sm-12 float-left mt-2">
+								<button class="btn btn-success w-100 first-day select-day" data-day="0">1-ci gun</button>
+							</div>
+
+							<div class="col-lg-4 col-md-6 col-sm-12 float-left mt-2">
+								<button class="btn btn-success w-100 second-day select-day" data-day="1">2-ci gun</button>
+							</div>
+
+							<div class="col-lg-4 col-md-6 col-sm-12 float-left mt-2">
+								<button class="btn btn-success w-100 third-day select-day" data-day="2">3-ci gun</button>
+							</div>
+						</div>
+
+						<div class="second-week mt-3 pb-5 border-bottom">
+							<div class="col-12">
+								<div class="d-block float-left w-100">
+									<p class="text-22px"><b id="second-week">Ikinci hafta</b></p>
+								</div>
+							</div>
+
+							<div class="col-lg-4 col-md-6 col-sm-12 float-left mt-2">
+								<button class="btn btn-success w-100 first-day select-day" data-day="3">1-ci gun</button>
+							</div>
+
+							<div class="col-lg-4 col-md-6 col-sm-12 float-left mt-2">
+								<button class="btn btn-success w-100 second-day select-day" data-day="4">2-ci gun</button>
+							</div>
+
+							<div class="col-lg-4 col-md-6 col-sm-12 float-left mt-2">
+								<button class="btn btn-success w-100 third-day select-day" data-day="5">3-ci gun</button>
+							</div>
+						</div>
+					</div>
+
+				</div>
+
+
 				<div class="week-program-list" style="display: none;">
 					<div class="plan-categories categories categories-w"></div>
 				</div>
@@ -143,8 +189,6 @@
 						</div>
 					</div>
 				</div>
-
-				
 
 			</div>
 		</div>
